--- a/.htaccess
+++ b/.htaccess
@@ -1,32 +1,14 @@
-# --- SPA rewrite + excepción /api ---
-
 Options -MultiViews
 RewriteEngine On
 RewriteBase /
 
-# 1) Deja pasar archivos/carpetas reales
+# deja pasar archivos/carpetas reales
 RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# 2) *** CLAVE *** No reescribir nada que empiece por /api/
+# *** CLAVE *** no reescribir nada de /api/
 RewriteRule ^api/ - [L]
 
-# 3) Todo lo demás -> index.html (fallback SPA)
+# fallback SPA
 RewriteRule ^ index.html [L]
-
-# --- compresión (opcional) ---
-<IfModule mod_deflate.c>
-  AddOutputFilterByType DEFLATE text/html text/plain text/css application/javascript application/json image/svg+xml
-</IfModule>
-
-# --- caché assets Vite (opcional) ---
-<IfModule mod_expires.c>
-  ExpiresActive On
-  ExpiresByType text/html "access plus 0 seconds"
-  ExpiresByType text/css "access plus 7 days"
-  ExpiresByType application/javascript "access plus 7 days"
-  ExpiresByType image/svg+xml "access plus 30 days"
-  ExpiresByType image/png "access plus 30 days"
-  ExpiresByType image/jpeg "access plus 30 days"
-</IfModule>
